# Tetris

./: Board.cpp  Board.h  CMakeLists.txt  README.md  Shape.h  spec.docx  ~$spec.docx
GameOfLifeExample/: Board.cpp  Board.h  CMakeLists.txt  main.cpp
GameOfLifeExample/cmake_modules/: FindSFML.cmake
